[SMS-536] bug fix

--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -167,6 +167,10 @@
       }
     }
 
+    .spon-btn.blue:hover {
+      background-color: #1da4f0;
+    }
+
     .destination-hurry-up-message {
       display: flex;
       border-radius: 3px;
