split button on tickets, trip issue fix

--- a/app/frontend/src/Common/Components/SplitButton/styles.scss
+++ b/app/frontend/src/Common/Components/SplitButton/styles.scss
@@ -61,6 +61,7 @@
   .right-down {
     display: inline-flex;
     align-items: center;
+    vertical-align: middle;
     width: 20%;
     justify-content: center;
     height: 100%;
