--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -374,6 +374,7 @@
         border: 1px solid #ddd;
         border-radius: 100%;
         background: #fff;
+        box-shadow: inset 0 0 3px #9ea1b9;
       }
       [type='radio']:checked + label:after,
       [type='radio']:not(:checked) + label:after {
