--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -418,7 +418,7 @@
     position: absolute;
     left: -1px;
     right: -1px;
-    top: 135px;
+    top: 160px;
     border-bottom: 1px solid;
     border-right: 1px solid;
     border-left: 1px solid;
@@ -426,7 +426,7 @@
     border-color: $gray;
 
     @include respond(bigger) {
-      top: 100px;
+      top: 140px;
     }
 
     @include respond(tab) {
@@ -434,7 +434,8 @@
     }
 
     @include respond(mobile) {
-      top: 140px;
+      top: 150px;
+      margin-bottom: 180px;
       border: none;
     }
 
