--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -63,6 +63,7 @@
     background-color: #ffffff;
     z-index: 2;
     overflow: auto;
+    overflow-x: hidden;
   }
   &-top {
     position: relative;
