--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -59,7 +59,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: calc(100vh - 160px) !important;
+    height: calc(100vh - 30px) !important;
     background-color: #ffffff;
     z-index: 2;
     overflow: auto;
@@ -437,6 +437,7 @@
     @include respond(mobile) {
       top: 150px;
       border: none;
+      padding-bottom: 120px;
     }
 
     .calendar {
