--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -59,15 +59,11 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: calc(100vh - 30px) !important;
+    height: unset !important;
     background-color: #ffffff;
     z-index: 2;
     overflow: auto;
     overflow-x: hidden;
-
-    &.gdpr-set {
-      height: calc(100vh - 160px) !important;
-    }
   }
   &-top {
     position: relative;
@@ -99,7 +95,7 @@
     &.shortest {
       height: 4rem;
       @include respond(tab) {
-        height: 7rem;
+        height: 8rem;
       }
     }
     &.medium {
@@ -149,10 +145,10 @@
     position: relative;
 
     @include respond(tab) {
-      height: 30rem;
+      // height: 30rem;
     }
     @include respond(mobile) {
-      height: 30rem;
+      // height: 30rem;
       padding-bottom: 1rem;
     }
     .spon-btn {
@@ -466,12 +462,16 @@
       flex-direction: column;
       margin-bottom: 1rem;
       padding: 0 1rem 0 1rem;
+
       @include respond(mobile) {
-        padding: 0 1rem 3rem 1rem;
+        padding: 0 1rem 5rem 1rem;
       }
       .blue-select:hover {
         background-color: #1da4f0;
       }
+    }
+    .gdpr {
+      padding: 0 1rem 15rem 1rem;
     }
 
     &-error {
